Bug 584355: Don't use parent as a proto for a new function. r=brendan