js/src/tests/js1_8_5/regress/regress-584355.js
@@ -1,0 +1,7 @@
+var actual;
+var expect = "function f() {\n    ff();\n}";
+function fun() {
+    (new Function ("function ff () { actual = '' + ff. caller; } function f () { ff (); } f ();")) ();
+}
+fun();
+reportCompare(expect, actual, "");
